--- a/resources/esx_dmvschool/html/ui_en.html
+++ b/resources/esx_dmvschool/html/ui_en.html
@@ -91,7 +91,7 @@
   </div>
 
   <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-  <script src="questions.js" type="text/javascript"></script>
+  <script src="questions_en.js" type="text/javascript"></script>
   <script src="scripts.js" type="text/javascript"></script>
   <script src="debounce.min.js" type="text/javascript"></script>
 
